# geistchess

./: .gitignore  README.md  board.py  game.py  move.py  pieces.py  player.py  utils.py
analysis/: absearch.py
board/: __init__.py  bishop_magic.txt  board.py  move.py  pieces.py  rays.txt  rook_magic.txt  utils.py
eval/: eval.py  utils.py
eval/gnn/: simple_ggnn.py
eval/gnn/data/: 1000depth17a.txt
movegen/: Cargo.toml
movegen/src/: board.rs  error.rs  lib.rs  main.rs  moves.rs  perft.rs  pieces.rs
movegen/src/graph/: mod.rs
movegen/src/uci/: client.rs  mod.rs
movegen/src/utils/: magic.rs  mod.rs  patterns.rs
notebooks/: llm_chess.ipynb
tests/: test_ab.py  test_board.py
