[package]
name = "movegen"
version = "0.1.0"
authors = ["geist <lysonnjoroge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.12"
bitintr = "0.3"
fnv = "1.0.7"
hdf5 = "0.6.1"
ndarray = "0.13.1"
regex = "1.3.9"
lazy_static = "1.4.0"
